# ffaicu

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: .config.example.py  config.py  database.py  dependencies.py  main.py
app/engine/: battle_core.py  battle_state.py  critical.py  damage.py  evasion.py  formula_parser.py  level_up.py  skill_executor.py
app/models/: __init__.py  ban_list.py  champion.py  character.py  equipment.py  item_catalog.py  job_mastery.py  login_log.py  message.py  monster.py  online_player.py  tournament.py  warehouse.py  zone_config.py
app/routers/: admin.py  auth.py  bank.py  battle_champion.py  battle_monster.py  battle_select.py  character.py  job_change.py  message.py  ranking.py  shop.py  status.py  system.py  tactic.py  tournament.py  views.py  warehouse.py
app/schemas/: auth.py  character.py
app/services/: auth_service.py  battle_service.py  character_service.py  npc_service.py  ranking_service.py  shop_service.py  skill_file_service.py  tournament_service.py
app/templates/: admin.html  admin_characters.html  admin_delete_all.html  admin_detail.html  admin_generate_npc.html  admin_item_edit.html  admin_items.html  admin_job_edit.html  admin_jobs.html  admin_monster_edit.html  admin_monsters.html  admin_skill_edit.html  admin_skill_list.html  admin_skills.html  admin_tournament.html  bank.html  base.html  base_rpg.html  battle_result.html  (+13 more)
data/: jobs.json  tactics.json
scripts/: seed_data.py
static/: rpg.css
tests/: conftest.py  test_auth_api.py  test_battle_engine.py  test_formula_parser.py  test_game_flow.py
(+139 files in other folders)
